...
/* Class = "NSMenuItem"; title = "Check Grammar With Spelling"; ObjectID = "mK6-2p-4JG"; */
"mK6-2p-4JG.title" = "Check Grammar With Spelling";

/* Class = "NSMenuItem"; title = "Services"; ObjectID = "NMo-om-nkz"; */
"NMo-om-nkz.title" = "Services";

/* Class = "NSButtonCell"; title = "Convert"; ObjectID = "Nyc-Jo-SJy"; */
"Nyc-Jo-SJy.title" = "Convert";

/* Class = "NSMenuItem"; title = "Hide DfontSplitter"; ObjectID = "Olw-nP-bQN"; */
"Olw-nP-bQN.title" = "Hide DfontSplitter";

/* Class = "NSMenuItem"; title = "Find Previous"; ObjectID = "OwM-mh-QMV"; */
...
