//
//  DfontSplitterUITests.swift
//  DfontSplitterUITests
//
//  Created by Peter Upfold on 26/07/2020.
//  Copyright © 2020 Peter Upfold. All rights reserved.
//

import XCTest

class DfontSplitterUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }
//
//    func testExample() throws {
//        // UI tests must launch the application that they test.
//        let app = XCUIApplication()
//        app.launch()
//
//        let dfontsplitterWindow = XCUIApplication().windows["DfontSplitter"]
//        dfontsplitterWindow.click()
//        dfontsplitterWindow.click()
//        dfontsplitterWindow/*@START_MENU_TOKEN@*/.menuItems["_otherItemClick:"]/*[[".groups",".staticTexts",".menus",".menuItems[\"Choose…\"]",".menuItems[\"_otherItemClick:\"]"],[[[-1,4],[-1,3],[-1,2,3],[-1,1,2],[-1,0,1]],[[-1,4],[-1,3],[-1,2,3],[-1,1,2]],[[-1,4],[-1,3],[-1,2,3]],[[-1,4],[-1,3]]],[0]]@END_MENU_TOKEN@*/.click()
//        dfontsplitterWindow.buttons["Convert"].click()
//
//        let replaceButton = dfontsplitterWindow.sheets["alert"].buttons["Replace"]
//        replaceButton.click()
//        replaceButton.click()
//
//        // Use recording to get started writing UI tests.
//        // Use XCTAssert and related functions to verify your tests produce the correct results.
//    }

//    func testLaunchPerformance() throws {
//        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
//            // This measures how long it takes to launch your application.
//            measure(metrics: [XCTApplicationLaunchMetric()]) {
//                XCUIApplication().launch()
//            }
//        }
//    }
}
